--- a/client/style.css
+++ b/client/style.css
@@ -130,7 +130,7 @@ button {
   outline: 0;
   border: 0;
   cursor: pointer;
-  background: transparent;
+  background: "transparent";
 }
 
 form img {
